namespace UserService.Domain.Constants;

public class USER_CONSTANTS
{
    public static readonly int USER_LIMIT = 20;
    public static readonly int ADMIN_USER_LIMIT = 6;
    public static readonly int ADMIN_USER_REPORT_LIMIT = 6;
}

public enum GenderType
{
    MALE,
    FEMALE
}
