
@startuml ClassDiagram
!include doc/SDS/CommonClassDiagram/ResultAndError.plantuml
!include doc/SDS/CommonClassDiagram/PaginateData.plantuml
!include doc/SDS/CommonClassDiagram/User/UserDbContext.plantuml
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 50
skinparam ranksep 50
hide circle

together {
    class BaseApiController {
        #_sender: ISender
        #_httpContextAccessor: HttpContextAccessor
    }

    class UserController {
        +GetUserFollowing(getUserFollowingsDTO : GetUserFollowingsDTO): async Task<IActionResult>
    }

    class GetUserFollowingsQuery {
        +AccountId: Guid
        +Skip: int
        +Keyword: string
    }

    class GetUserFollowingsDTO {
        +Skip: int
        +Keyword: string
    }
}

class GetUserFollowingsQueryHandler {
    -_context : IApplicationDbContext
    -_paginateDataUtility: IPaginateDataUtility<User, AdvancePaginatedMetadata> 
    +GetUserFollowingsQueryHandler(context : IApplicationDbContext, paginateDataUtility : IPaginateDataUtility<User, AdvancePaginatedMetadata>)
    +Handle(request: GetUserFollowingsQuery, cancellationToken: CancellationToken) : Task<Result<PaginatedSimpleUserListResponse>>
}

class PaginatedSimpleUserListResponse

class "BasePaginatedResponse<Type,MetadataType>" {
    +PaginatedData: IEnumerable<Type>
    +Metadata: MetadataType
}

class CommonPaginatedMetadata {
    +TotalPage: int

}

class AdvancePaginatedMetadata extends CommonPaginatedMetadata {
    +HasNextPage: bool
}

class UserError {
    {static} +NotFound: Error
    {static} +NullParameters: Error
}

class USER_CONSTANTS {
    {static} +USER_LIMIT: int
}

class SimpleUserResponse {
    +Id : Guid
    +AvtUrl : string
    +DisplayName : string
    +Username : string
    +NumberOfRecipe : int
    +IsFollowing : bool
}

' =========== Library class ===========
interface "IRequest<TResponse>" #black;line:white;text:white
interface "IRequestHandler<TRequest, TResponse>" #black;line:white;text:white
' =========== Library class ===========

PaginatedSimpleUserListResponse "1" o-- "1..*" SimpleUserResponse
PaginatedSimpleUserListResponse "1" o-- "1" AdvancePaginatedMetadata

UserController --|> BaseApiController
UserController "1"--"1" GetUserFollowingsQuery
UserController "1"--"1" GetUserFollowingsDTO
GetUserFollowingsQuery ..|> "IRequest<TResponse>"

GetUserFollowingsQueryHandler ..|> "IRequestHandler<TRequest, TResponse>"
GetUserFollowingsQueryHandler "1" --"1" GetUserFollowingsQuery
GetUserFollowingsQueryHandler "1" o--"1" IPaginateDataUtility
GetUserFollowingsQueryHandler "1" o--"1" IApplicationDbContext
GetUserFollowingsQueryHandler "1" --"1..*" USER_CONSTANTS
GetUserFollowingsQueryHandler "1" --"1..*" UserError
GetUserFollowingsQueryHandler "1" --"1" Result
GetUserFollowingsQueryHandler "1" --"1..*" PaginatedSimpleUserListResponse

"BasePaginatedResponse<Type,MetadataType>" "1" <|-up-"1" PaginatedSimpleUserListResponse

' Style
CommonPaginatedMetadata -[hidden]up- AdvancePaginatedMetadata

Error "1..*" --o "1" UserError

@enduml